test/bad/b15.erl
-module(b15).

% bad when

foo4(F,X,Y) when F -> F(X).